Add generic injector, yay!

--- a/src/app/heaters/heaters.html
+++ b/src/app/heaters/heaters.html
@@ -7,7 +7,7 @@
                                 data-size="1"
                                 data-title="heater.display"
                                 data-element="heater">
-				<data-sag-heater data-heater="heater"></data-sag-heater>
+				<data-sag-heater data-element="heater"></data-sag-heater>
 			</data-sag-container>
         </div>
     </div>
