--- a/src/app/sensors/sensors.html
+++ b/src/app/sensors/sensors.html
@@ -7,7 +7,7 @@
                                 data-size="1"
                                 data-title="sensor.display"
                                 data-element="sensor">
-                <data-sag-sensor data-sensor="sensor"></data-sag-sensor>
+                <data-sag-sensor data-element="sensor"></data-sag-sensor>
             </data-sag-container>
         </div>
     </div>
