--- a/src/app/switches/switches.html
+++ b/src/app/switches/switches.html
@@ -8,7 +8,7 @@
                                 data-size="1"
                                 data-title="switcher.display"
                                 data-element="switcher">
-				<data-sag-switch data-switcher="switcher"></data-sag-switch>
+				<data-sag-switch data-element="switcher"></data-sag-switch>
 			</data-sag-container>
         </div>
     </div>
@@ -20,7 +20,7 @@
                                 data-size="1"
                                 data-title="dimmer.display"
                                 data-element="dimmer">
-                <data-sag-dimmer data-dimmer="dimmer"></data-sag-dimmer>
+                <data-sag-dimmer data-element="dimmer"></data-sag-dimmer>
             </data-sag-container>
         </div>
     </div>
