--- a/src/app/weather/weather.html
+++ b/src/app/weather/weather.html
@@ -14,7 +14,7 @@
 							data-title="mock.name"
 							data-element="mock"
 							class="col-sm-2">
-			<data-carleon-mock data-mock="mock"></data-carleon-mock>
+			<data-carleon-mock data-element="mock"></data-carleon-mock>
 		</data-sag-container>
     </div>
 </div>
