--- a/src/components/dimmer/dimmer.template.html
+++ b/src/components/dimmer/dimmer.template.html
@@ -1,25 +1,25 @@
-<div data-ng-if="$ctrl.dimmer.enabled || $ctrl.adminMode">
+<div data-ng-if="$ctrl.element.enabled || $ctrl.adminMode">
     <div class="text-center" data-ng-class="{'text-italic': $ctrl.adminMode}">
         <div class="ring">
             <div class="quarter quarter1" 
 				 data-ng-click="$ctrl.setDimmer(100)"
-				 data-ng-class="{'quarter-off': $ctrl.dimmer.value < 75, 'quarter-on': $ctrl.dimmer.value >= 75}">
+				 data-ng-class="{'quarter-off': $ctrl.element.value < 75, 'quarter-on': $ctrl.element.value >= 75}">
                 <span class="quarter-value">100%</span>
             </div>
             <div class="quarter quarter2" data-ng-click="$ctrl.setDimmer(0)"
-				 data-ng-class="{'quarter-off': $ctrl.dimmer.value === 0, 'quarter-on': $ctrl.dimmer.value > 0}">
+				 data-ng-class="{'quarter-off': $ctrl.element.value === 0, 'quarter-on': $ctrl.element.value > 0}">
                 <span class="quarter-value">0%</span>
             </div>
             <div class="quarter quarter3" data-ng-click="$ctrl.setDimmer(50)"
-				 data-ng-class="{'quarter-off': $ctrl.dimmer.value < 50, 'quarter-on': $ctrl.dimmer.value >= 50}">
+				 data-ng-class="{'quarter-off': $ctrl.element.value < 50, 'quarter-on': $ctrl.element.value >= 50}">
                 <span class="quarter-value"><br/>50%</span>
             </div>
             <div class="quarter quarter4" data-ng-click="$ctrl.setDimmer(25)"
-				 data-ng-class="{'quarter-off': $ctrl.dimmer.value < 25, 'quarter-on': $ctrl.dimmer.value >= 25}">
+				 data-ng-class="{'quarter-off': $ctrl.element.value < 25, 'quarter-on': $ctrl.element.value >= 25}">
                 <span class="quarter-value"><br/>25%</span>
             </div>
             <div class="cutout">
-                <div class="ring-value" data-ng-bind="$ctrl.dimmer.value">
+                <div class="ring-value" data-ng-bind="$ctrl.element.value">
                 </div>
             </div>
         </div>
