--- a/src/components/sensor/sensor.template.html
+++ b/src/components/sensor/sensor.template.html
@@ -1,6 +1,6 @@
-<div data-ng-if="$ctrl.sensor.enabled || $ctrl.adminMode">
+<div data-ng-if="$ctrl.element.enabled || $ctrl.adminMode">
     <div class="text-center" data-ng-class="{'text-italic': $ctrl.adminMode}">
-        <div data-ng-bind="$ctrl.sensorDisplayValue()">
+        <div data-ng-bind="$ctrl.elementDisplayValue()">
         </div>
     </div>
 </div>
