Dashboard seems to work

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
             <div data-gridstack class="grid-stack grid1"
                  data-options="DashboardCtrl.options"
-                 data-on-change="onChange(event, items)">
+                 data-on-change="DashboardCtrl.onChange(event, items)">
                 <div data-gridstack-item
                      data-ng-repeat="w in DashboardCtrl.dashboardWidgets"
                      class="grid-stack-item"
