--- a/src/app/scripts/scripts.html
+++ b/src/app/scripts/scripts.html
@@ -4,11 +4,12 @@
     <div class="row" data-ng-if="scriptsCtrl.sagremorParams.adminMode">
 		<button type="button" class="btn btn-primary" name="addScript" id="addScript" data-ng-click="scriptsCtrl.newScript()" data-translate="scripts_button_add"></button>
     </div>
+    <hr>
     <div class="row">
-        <div data-ng-repeat="script in scriptsCtrl.scriptList">
+        <div data-ng-repeat="script in scriptsCtrl.scriptList track by script.name" class="col-sm-2">
             <data-sag-container data-menu="scriptsCtrl.menuScript"
                                 data-size="1"
-                                data-title="script.display"
+                                data-title="script.name"
                                 data-element="script">
 				<data-sag-script data-script="script"></data-sag-script>
 			</data-sag-container>
