--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -1,6 +1,6 @@
 <div class="sag-container">
 	<div class="row">
-        <div class="sag-container-header-menu col-sm-2" data-uib-dropdown>
+        <div class="sag-container-header-menu col-sm-2" data-ng-if="!!$ctrl.menu" data-uib-dropdown>
             <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle data-ng-click="">#</button>
             <ul data-uib-dropdown-menu>
                 <li data-ng-repeat="menuItem in $ctrl.menu"><a href="" data-ng-click="$ctrl.menuSelect(menuItem, $ctrl.element)" data-ng-bind="menuItem.display"></a></li>
