Improve style by using boostrap more wisely

--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -10,8 +10,8 @@
             <span data-ng-bind="$ctrl.title" class="text-center"></span>
         </div>
     </div>
-	<div class="row">
-        <div data-ng-transclude class="sag-container-element col-xs-12">
+	<div class="row control-group">
+        <div data-ng-transclude class="sag-container-element col-md-12">
         </div>
     </div>
 </div>
