--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,3 +1,18 @@
 <div class="container">
-    <h1>Events</h1>
+    <h1 data-translate="events_title"></h1>
+
+    <div class="row" data-ng-if="eventsCtrl.sagremorParams.adminMode">
+		<button type="button" class="btn btn-primary" name="addEvent" id="addEvent" data-ng-click="eventsCtrl.newEvent()" data-translate="events_button_add"></button>
+    </div>
+    <hr>
+    <div class="row">
+        <div data-ng-repeat="event in eventsCtrl.eventList track by event.name" class="col-sm-2">
+            <data-sag-container data-menu="eventsCtrl.menuEvent"
+                                data-size="1"
+                                data-title="event.name"
+                                data-element="event">
+				<data-sag-event data-event="event"></data-sag-event>
+			</data-sag-container>
+        </div>
+    </div>
 </div>
