--- a/src/components/container/container.less
+++ b/src/components/container/container.less
@@ -17,6 +17,8 @@
   border-radius: 10px;
   border: 2px solid;
   margin: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .sag-container-element  {
