--- a/src/components/dimmer/dimmer.modal.html
+++ b/src/components/dimmer/dimmer.modal.html
@@ -3,39 +3,44 @@
         <h3 class="modal-title" data-translate="dimmer_update_title"></h3>
     </div>
     <div class="modal-body">
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="dimmer_update_name"></span>
-            <div class="col-md-6">
-                <input type="text" name="dimmerDisplay" id="dimmerDisplay" data-ng-model="DimmersModalCtrl.dimmer.newDisplay" class="modal-input-text">
+            <div class="col-md-6 controls">
+                <input type="text" name="dimmerDisplay" id="dimmerDisplay" data-ng-model="DimmersModalCtrl.dimmer.newDisplay" class="modal-input-text form-control">
             </div>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="dimmer_update_enabled"></span>
-            <div class="col-md-6"><input type="checkbox" 
-                    data-bs-switch 
-                    data-toggle="toggle" 
-                    data-dimmer-size="mini" 
-                    data-ng-model="DimmersModalCtrl.dimmer.enabled">
+            <div class="col-md-6 controls">
+				<input type="checkbox" 
+						class="form-control"
+						data-bs-switch 
+						data-toggle="toggle" 
+						data-switch-size="mini" 
+						data-ng-model="DimmersModalCtrl.dimmer.enabled">
             </div>
         </div>
         <div class="row">
             <hr>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="dimmer_update_monitor"></span>
-            <div class="col-md-6"><input type="checkbox" 
-                    data-bs-switch 
-                    data-toggle="toggle" 
-                    data-dimmer-size="mini" 
-                    data-ng-model="DimmersModalCtrl.dimmer.monitored">
+            <div class="col-md-6 controls">
+				<input type="checkbox" 
+						class="form-control"
+						data-bs-switch 
+						data-toggle="toggle" 
+						data-switch-size="mini" 
+						data-ng-model="DimmersModalCtrl.dimmer.monitored">
             </div>
         </div>
-        <div class="row" data-ng-if="DimmersModalCtrl.dimmer.monitored">
+        <div class="row control-group" data-ng-if="DimmersModalCtrl.dimmer.monitored">
             <span class="col-md-6" data-translate="dimmer_update_monitor_every"></span>
-            <div class="col-md-6">
+            <div class="col-md-6 controls">
                 <select id="bddAddUserGrant"
-                    data-ng-model="DimmersModalCtrl.dimmer.monitored_every"
-                    data-ng-options="monitorEvery.value as monitorEvery.trLabel for monitorEvery in DimmersModalCtrl.monitorEveryEnum">
+						class="form-control"
+						data-ng-model="DimmersModalCtrl.dimmer.monitored_every"
+						data-ng-options="monitorEvery.value as DimmersModalCtrl.tr(monitorEvery.label) for monitorEvery in DimmersModalCtrl.monitorEveryEnum">
                 </select>
             </div>
         </div>
