--- a/src/components/heater/heater.modal.html
+++ b/src/components/heater/heater.modal.html
@@ -3,45 +3,50 @@
         <h3 class="modal-title" data-translate="heater_update_title"></h3>
     </div>
     <div class="modal-body">
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="heater_update_name"></span>
-            <div class="col-md-6">
-                <input type="text" name="heaterDisplay" id="heaterDisplay" data-ng-model="HeatersModalCtrl.heater.newDisplay" class="modal-input-text">
+            <div class="col-md-6 controls">
+                <input type="text" name="heaterDisplay" id="heaterDisplay" data-ng-model="HeatersModalCtrl.heater.newDisplay" class="modal-input-text form-control">
             </div>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="heater_update_unit"></span>
-            <div class="col-md-6">
-                <input type="text" name="heaterUnit" id="heaterUnit" data-ng-model="HeatersModalCtrl.heater.options.unit" class="modal-input-text">
+            <div class="col-md-6 controls">
+                <input type="text" name="heaterUnit" id="heaterUnit" data-ng-model="HeatersModalCtrl.heater.options.unit" class="modal-input-text form-control">
             </div>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="heater_update_enabled"></span>
-            <div class="col-md-6"><input type="checkbox" 
-                    data-bs-switch 
-                    data-toggle="toggle" 
-                    data-heater-size="mini" 
-                    data-ng-model="HeatersModalCtrl.heater.enabled">
+            <div class="col-md-6 controls">
+				<input type="checkbox" 
+						data-bs-switch 
+						class="form-control"
+						data-toggle="toggle" 
+						data-switch-size="mini" 
+						data-ng-model="HeatersModalCtrl.heater.enabled">
             </div>
         </div>
         <div class="row">
             <hr>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="heater_update_monitor"></span>
-            <div class="col-md-6"><input type="checkbox" 
-                    data-bs-switch 
-                    data-toggle="toggle" 
-                    data-heater-size="mini" 
-                    data-ng-model="HeatersModalCtrl.heater.monitored">
+            <div class="col-md-6 controls">
+				<input type="checkbox" 
+						data-bs-switch 
+						class="form-control"
+						data-toggle="toggle" 
+						data-switch-size="mini" 
+						data-ng-model="HeatersModalCtrl.heater.monitored">
             </div>
         </div>
-        <div class="row" data-ng-if="HeatersModalCtrl.heater.monitored">
+        <div class="row control-group" data-ng-if="HeatersModalCtrl.heater.monitored">
             <span class="col-md-6" data-translate="heater_update_monitor_every"></span>
-            <div class="col-md-6">
+            <div class="col-md-6 controls">
                 <select id="bddAddUserGrant"
-                    data-ng-model="HeatersModalCtrl.heater.monitored_every"
-                    data-ng-options="monitorEvery.value as monitorEvery.trLabel for monitorEvery in HeatersModalCtrl.monitorEveryEnum">
+						class="form-control"
+						data-ng-model="HeatersModalCtrl.heater.monitored_every"
+						data-ng-options="monitorEvery.value as HeatersModalCtrl.tr(monitorEvery.label) for monitorEvery in HeatersModalCtrl.monitorEveryEnum">
                 </select>
             </div>
         </div>
