--- a/src/components/heater/heater.template.html
+++ b/src/components/heater/heater.template.html
@@ -1,11 +1,11 @@
 <div data-ng-if="$ctrl.element.enabled || $ctrl.adminMode">
     <div class="text-center" data-ng-class="{'text-italic': $ctrl.adminMode}">
-		<div class="row">
+		<div class="row control-group">
 			<span class="heater-on">
 				<i class="fa fa-fire" aria-hidden="true" data-ng-if="$ctrl.element.value.on"></i>
 			</span>
 		</div>
-        <div class="ring">
+        <div class="ring control-group">
             <div class="quarter quarter-plus-1" data-ng-click="$ctrl.setHeater(1)">
                 <span class="quarter-value" data-ng-bind="$ctrl.displayCommand(1)"></span>
             </div>
@@ -23,13 +23,17 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-			<label for="heaterMode" data-translate="heater_mode_title"></label>
-			<select name="heaterMode" value="heaterMode" data-ng-model="$ctrl.element.value.mode" data-ng-change="$ctrl.setHeater(null)">
-				<option value="off" data-translate="heater_mode_off"></option>
-				<option value="auto" data-translate="heater_mode_auto"></option>
-				<option value="manual" data-translate="heater_mode_manual"></option>
-			</select>
+        <div class="row control-group">
+			<div class="col-md-4 controls">
+				<label for="heaterMode" data-translate="heater_mode_title"></label>
+			</div>
+			<div class="col-md-8 controls">
+				<select class="form-control" name="heaterMode" value="heaterMode" data-ng-model="$ctrl.element.value.mode" data-ng-change="$ctrl.setHeater(null)">
+					<option value="off" data-translate="heater_mode_off"></option>
+					<option value="auto" data-translate="heater_mode_auto"></option>
+					<option value="manual" data-translate="heater_mode_manual"></option>
+				</select>
+			</div>
         </div>
     </div>
 </div>
