--- a/src/components/sensor/sensor.modal.html
+++ b/src/components/sensor/sensor.modal.html
@@ -3,45 +3,50 @@
         <h3 class="modal-title" data-translate="sensor_update_title"></h3>
     </div>
     <div class="modal-body">
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="sensor_update_name"></span>
-            <div class="col-md-6">
-                <input type="text" name="sensorDisplay" id="sensorDisplay" data-ng-model="SensorsModalCtrl.sensor.newDisplay" class="modal-input-text">
+            <div class="col-md-6 controls">
+                <input type="text" name="sensorDisplay" id="sensorDisplay" data-ng-model="SensorsModalCtrl.sensor.newDisplay" class="modal-input-text form-control">
             </div>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="sensor_update_unit"></span>
-            <div class="col-md-6">
-                <input type="text" name="sensorUnit" id="sensorUnit" data-ng-model="SensorsModalCtrl.sensor.options.unit" class="modal-input-text">
+            <div class="col-md-6 controls">
+                <input type="text" name="sensorUnit" id="sensorUnit" data-ng-model="SensorsModalCtrl.sensor.options.unit" class="modal-input-text form-control">
             </div>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="sensor_update_enabled"></span>
-            <div class="col-md-6"><input type="checkbox" 
-                    data-bs-switch 
-                    data-toggle="toggle" 
-                    data-sensor-size="mini" 
-                    data-ng-model="SensorsModalCtrl.sensor.enabled">
+            <div class="col-md-6 controls">
+				<input type="checkbox" 
+						data-bs-switch 
+						class="form-control"
+						data-toggle="toggle" 
+						data-switch-size="mini" 
+						data-ng-model="SensorsModalCtrl.sensor.enabled">
             </div>
         </div>
         <div class="row">
             <hr>
         </div>
-        <div class="row">
+        <div class="row control-group">
             <span class="col-md-6" data-translate="sensor_update_monitor"></span>
-            <div class="col-md-6"><input type="checkbox" 
-                    data-bs-switch 
-                    data-toggle="toggle" 
-                    data-sensor-size="mini" 
-                    data-ng-model="SensorsModalCtrl.sensor.monitored">
+            <div class="col-md-6">
+				<input type="checkbox" 
+						data-bs-switch 
+						class="form-control"
+						data-toggle="toggle" 
+						data-switch-size="mini" 
+						data-ng-model="SensorsModalCtrl.sensor.monitored">
             </div>
         </div>
-        <div class="row" data-ng-if="SensorsModalCtrl.sensor.monitored">
+        <div class="row control-group" data-ng-if="SensorsModalCtrl.sensor.monitored">
             <span class="col-md-6" data-translate="sensor_update_monitor_every"></span>
             <div class="col-md-6">
                 <select id="bddAddUserGrant"
-                    data-ng-model="SensorsModalCtrl.sensor.monitored_every"
-                    data-ng-options="monitorEvery.value as monitorEvery.trLabel for monitorEvery in SensorsModalCtrl.monitorEveryEnum">
+						class="form-control"
+						data-ng-model="SensorsModalCtrl.sensor.monitored_every"
+						data-ng-options="monitorEvery.value as SensorsModalCtrl.tr(monitorEvery.label) for monitorEvery in SensorsModalCtrl.monitorEveryEnum">
                 </select>
             </div>
         </div>
