--- a/src/components/topLeftMenu/topLeftMenu.template.html
+++ b/src/components/topLeftMenu/topLeftMenu.template.html
@@ -3,67 +3,67 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </button>
     <ul class="container-fluid" data-uib-dropdown-menu data-uib-dropdown-menu-auto-close="outsideClick" data-ng-click="$event.stopPropagation()">
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/">
                 <i class="fa fa-home"></i>
                 <span data-translate="menu_home"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/switches">
                 <i class="fa fa-lightbulb-o"></i>
                 <span data-translate="menu_lights"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/heaters">
                 <i class="fa fa-fire"></i>
                 <span data-translate="menu_heaters"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/sensors">
                 <i class="fa fa-line-chart"></i>
                 <span data-translate="menu_sensors"></span>
             </a>
         </li>
-        <li class="row" data-ng-repeat="service in topLeftMenuCtrl.serviceList">
+        <li class="row-fluid" data-ng-repeat="service in topLeftMenuCtrl.serviceList">
             <a data-ng-href="#/service/{{service.target}}">
 				<data-ng-bind-html data-ng-bind-html="service.icon"></data-ng-bind-html>
                 <span data-translate="{{service.title}}"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/scripts">
                 <i class="fa fa-tasks"></i>
                 <span data-translate="menu_scripts"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/events">
                 <i class="fa fa-calendar"></i>
                 <span data-translate="menu_events"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/monitors">
                 <i class="fa fa-bar-chart"></i>
                 <span data-translate="menu_monitor"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/logs">
                 <i class="fa fa-history"></i>
                 <span data-translate="menu_logs"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a data-ng-href="#/parameters">
                 <i class="fa fa-cogs"></i>
                 <span data-translate="menu_parameters"></span>
             </a>
         </li>
-        <li class="row">
+        <li class="row-fluid">
             <a href="" data-ng-click="topLeftMenuCtrl.logout()">
                 <i class="fa fa-sign-out"></i>
                 <span data-translate="menu_logout"></span>
