--- a/src/app/scripts/scripts.html
+++ b/src/app/scripts/scripts.html
@@ -11,7 +11,7 @@
                                 data-size="1"
                                 data-title="script.name"
                                 data-element="script">
-				<data-sag-script data-script="script"></data-sag-script>
+				<data-sag-script data-element="script"></data-sag-script>
 			</data-sag-container>
         </div>
     </div>
