--- a/src/components/container/container.less
+++ b/src/components/container/container.less
@@ -1,6 +1,10 @@
 .sag-container-header-menu {
 }
 
+.sag-container-header-title-dashboard {
+	text-align: center;
+}
+
 .sag-container-header-title {
     white-space: nowrap;
     overflow: hidden;
@@ -11,6 +15,14 @@
 	font-weight: bold;
 	padding-left: 10px;
 	padding-right: 10px;
+}
+
+.sag-container-dashboard {
+  margin: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #cccccc;
+  border-radius: 10px;
 }
 
 .sag-container {
