--- a/src/components/topLeftMenu/topLeftMenu.template.html
+++ b/src/components/topLeftMenu/topLeftMenu.template.html
@@ -1,8 +1,8 @@
 <div class="top-left-menu" data-uib-dropdown data-ng-if="topLeftMenuCtrl.sagremorParams.loggedIn">
-    <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle>
+    <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle data-ng-click="">
         <i class="fa fa-bars" aria-hidden="true"></i>
     </button>
-    <ul class="container-fluid" data-uib-dropdown-menu data-uib-dropdown-menu-auto-close="outsideClick" data-ng-click="$event.stopPropagation()">
+    <ul class="container-fluid" data-uib-dropdown-menu data-uib-dropdown-menu-auto-close="outsideClick">
         <li class="row-fluid">
             <a data-ng-href="#/">
                 <i class="fa fa-home"></i>
