--- a/src/components/heater/heater.template.html
+++ b/src/components/heater/heater.template.html
@@ -5,29 +5,32 @@
 				<i class="fa fa-fire" aria-hidden="true" data-ng-if="$ctrl.element.value.on"></i>
 			</span>
 		</div>
-        <div class="ring control-group">
-            <div class="quarter quarter-plus-1" data-ng-click="$ctrl.setHeater(1)">
-                <span class="quarter-value" data-ng-bind="$ctrl.displayCommand(1)"></span>
-            </div>
-            <div class="quarter quarter-plus-5" data-ng-click="$ctrl.setHeater(5)">
-                <span class="quarter-value" data-ng-bind="$ctrl.displayCommand(5)"></span>
-            </div>
-            <div class="quarter quarter-minus-1" data-ng-click="$ctrl.setHeater(-1)">
-                <span class="quarter-value" data-ng-bind="$ctrl.displayCommand(-1)"></span>
-            </div>
-            <div class="quarter quarter-minus-5" data-ng-click="$ctrl.setHeater(-5)">
-                <span class="quarter-value" data-ng-bind="$ctrl.displayCommand(-5)"></span>
-            </div>
-            <div class="cutout-heater">
-                <div class="ring-value" data-ng-bind="$ctrl.displayCommandValue()">
-                </div>
-            </div>
-        </div>
-        <div class="row control-group">
-			<div class="col-md-4 controls">
+		<div class="row control-group">
+			<div class="ring control-group">
+				<div class="quarter quarter-plus-1" data-ng-click="$ctrl.setHeater(1)">
+					<span class="quarter-value" data-ng-bind="$ctrl.displayCommand(1)"></span>
+				</div>
+				<div class="quarter quarter-plus-5" data-ng-click="$ctrl.setHeater(5)">
+					<span class="quarter-value" data-ng-bind="$ctrl.displayCommand(5)"></span>
+				</div>
+				<div class="quarter quarter-minus-1" data-ng-click="$ctrl.setHeater(-1)">
+					<span class="quarter-value" data-ng-bind="$ctrl.displayCommand(-1)"></span>
+				</div>
+				<div class="quarter quarter-minus-5" data-ng-click="$ctrl.setHeater(-5)">
+					<span class="quarter-value" data-ng-bind="$ctrl.displayCommand(-5)"></span>
+				</div>
+				<div class="cutout-heater">
+					<div class="ring-value" data-ng-bind="$ctrl.displayCommandValue()">
+					</div>
+				</div>
+			</div>
+		</div>
+		<hr class="heater-hr">
+        <div class="clearfix control-group">
+			<div class="col-sm-4 controls">
 				<label for="heaterMode" data-translate="heater_mode_title"></label>
 			</div>
-			<div class="col-md-8 controls">
+			<div class="col-sm-8 controls">
 				<select class="form-control" name="heaterMode" value="heaterMode" data-ng-model="$ctrl.element.value.mode" data-ng-change="$ctrl.setHeater(null)">
 					<option value="off" data-translate="heater_mode_off"></option>
 					<option value="auto" data-translate="heater_mode_auto"></option>
