--- a/src/components/script/script.template.html
+++ b/src/components/script/script.template.html
@@ -1,3 +1,4 @@
 <div class="text-center">
-	<button type="button" data-ng-click="$ctrl.runScript()" class="btn btn-primary" data-ng-bind="$ctrl.element.name"></button>
+	<button type="button" data-ng-click="$ctrl.runScript()" class="btn btn-primary script-button" data-ng-bind="$ctrl.element.name">
+	</button>
 </div>
