--- a/src/components/modals/monitor.modal.html
+++ b/src/components/modals/monitor.modal.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
     <div class="modal-header">
-        <h3 class="modal-title" data-translate="monitor-title"></h3>
+        <h3 class="modal_title" data-translate="monitor_title"></h3>
     </div>
     <div class="modal-body">
         <canvas id="line" class="chart chart-line" 
@@ -12,6 +12,6 @@
         </canvas> 
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" type="button" data-ng-click="MonitorModalCtrl.close()" data-translate="monitor-close"></button>
+        <button class="btn btn-primary" type="button" data-ng-click="MonitorModalCtrl.close()" data-translate="monitor_close"></button>
     </div>
 </div>
