--- a/src/app/monitors/monitors.html
+++ b/src/app/monitors/monitors.html
@@ -1,3 +1,18 @@
 <div class="container">
-    <h1>Monitors</h1>
+    <h1 data-translate="monitors_title"></h1>
+
+    <div class="row" data-ng-if="monitorsCtrl.sagremorParams.adminMode">
+		<button type="button" class="btn btn-primary" name="addMonitor" id="addMonitor" data-ng-click="scriptsCtrl.newMonitor()" data-translate="monitors_button_add"></button>
+    </div>
+    <hr>
+    <div class="row">
+        <div data-ng-repeat="monitor in monitorsCtrl.MonitorList track by monitor.name" class="col-sm-2">
+            <data-sag-container data-menu="monitorsCtrl.menu"
+                                data-size="1"
+                                data-title="monitor.name"
+                                data-element="monitor">
+				<data-sag-monitor data-element="monitor"></data-sag-monitor>
+			</data-sag-container>
+        </div>
+    </div>
 </div>
