--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -5,7 +5,7 @@
 				<i class="fa fa-bars" aria-hidden="true"></i>
             </button>
             <ul data-uib-dropdown-menu>
-                <li data-ng-repeat="menuItem in $ctrl.menu"><a href="" data-ng-click="$ctrl.menuSelect(menuItem, $ctrl.element)" data-ng-bind="menuItem.display"></a></li>
+                <li data-ng-repeat="menuItem in $ctrl.menu" data-ng-if="menuItem.name !== 'monitor' || $ctrl.element.monitored"><a href="" data-ng-click="$ctrl.menuSelect(menuItem, $ctrl.element)" data-ng-bind="menuItem.display"></a></li>
             </ul>
         </div>
         <div data-ng-if="$ctrl.element.type !== 'script'" class="sag-container-header-title col-xs-10" data-ng-class="{'sag-container-header-title-dashboard': $ctrl.dashboard}">
