Implement logs with its filters and alerts management

--- a/src/components/modals/edit.modal.html
+++ b/src/components/modals/edit.modal.html
@@ -13,7 +13,7 @@
 			</div>
         </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" type="button" data-ng-click="EditModalCtrl.ok()">OK</button>
-        <button class="btn btn-warning" type="button" data-ng-click="EditModalCtrl.cancel()">Cancel</button>
+        <button class="btn btn-primary" type="button" data-ng-click="EditModalCtrl.ok()" data-translate="modal_button_ok"></button>
+        <button class="btn btn-warning" type="button" data-ng-click="EditModalCtrl.cancel()" data-translate="modal_button_cancel"></button>
     </div>
 </div>
